--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lounchpad",
+  "name": "AppTemplate",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -64,7 +64,7 @@
     "path": "^0.12.7",
     "postcss": "^8.4.38",
     "prettier": "^3.1.1",
-    "pretty-quick": "^3.1.3",
+    "pretty-quick": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "unplugin-fonts": "^1.1.1",
